src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__turboquant_dashboard__turboquant_dashboard_empty_sessions_renders_placeholder.snap
---
source: src/tui/snapshot_tests/turboquant_dashboard.rs
assertion_line: 130
expression: terminal.backend()
---
"╭──────────────────────────────────────────[ Estimated Savings (projection) ]──────────────────────────────────────────╮"
"│ TurboQuant: ON Sessions projected: 0                                                                                 │"
"│ Tokens saved: 0  USD saved: $0.0000                                                                                  │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╔══════════════════════════════════════════[ Savings Breakdown (projected) ]═══════════════════════════════════════════╗"
"║ No session token data yet. Run sessions to gather projections.                                                       ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
