src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__turboquant_dashboard__turboquant_dashboard_mixed_actual_and_projections_header_shows_actual.snap
---
source: src/tui/snapshot_tests/turboquant_dashboard.rs
assertion_line: 112
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────[ Actual Savings ]──────────────────────────────────────────────────┐"
"│ TurboQuant: ON Sessions: 1 actual, 1 projected                                                                       │"
"│ Tokens saved: 9.8k  USD saved: $0.0463                                                                               │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"╔════════════════════════════════════════════════[ Savings Breakdown ]═════════════════════════════════════════════════╗"
"║       ID               Title    Kind     Saved         USD   Ratio                                                   ║"
"║      #10    Compress handoff  ACTUAL      7.5k     $0.0357    4.0x                                                   ║"
"║      #11        Pending work   proj.      2.2k     $0.0105    4.0x                                                   ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
