src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__turboquant_dashboard__turboquant_dashboard_projections_only_header_shows_estimated.snap
---
source: src/tui/snapshot_tests/turboquant_dashboard.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────[ Estimated Savings (projection) ]──────────────────────────────────────────╮"
"│ TurboQuant: ON Sessions projected: 2                                                                                 │"
"│ Tokens saved: 9.8k  USD saved: $0.0351                                                                               │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╔══════════════════════════════════════════[ Savings Breakdown (projected) ]═══════════════════════════════════════════╗"
"║       ID               Title    Kind     Saved         USD   Ratio                                                   ║"
"║       #1      Fix login flow   proj.      3.8k     $0.0136    4.0x                                                   ║"
"║       #2     Add cache layer   proj.      6.0k     $0.0214    4.0x                                                   ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
